@@ -10,10 +10,10 @@ import com.couchbase.client.java.AsyncCollection;
 import com.couchbase.client.java.Cluster;
 import com.couchbase.client.java.Collection;
 import com.couchbase.client.java.kv.GetResult;
+import com.couchbase.client.java.kv.MutationResult;
 import com.couchbase.client.java.query.QueryResult;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 /**
  * Implements a DataConnector for Couchbase. Couchbase is a JSON document based database. <br>
@@ -114,7 +114,7 @@ public class CouchbaseConnector implements DataConnector {
    */
   public List<CompletableFuture<GetResult>> bulkGet(List<String> keys) {
     final Collection session = getSession();
-    return keys.stream().map(key -> session.async().get(key)).collect(Collectors.toList());
+    return keys.stream().map(key -> session.async().get(key)).toList();
   }
 
   /**
@@ -132,8 +132,9 @@ public class CouchbaseConnector implements DataConnector {
    *
    * @param key the key for the document
    * @param content the document content
+   * @return future of the persisting result
    */
-  public void persist(String key, Object content) {
-    getSession().async().insert(key, content);
+  public CompletableFuture<MutationResult> persist(String key, Object content) {
+    return getSession().async().insert(key, content);
   }
 }
